--- a/Resources/Prototypes/SS220/StatusEffects/job.yml
+++ b/Resources/Prototypes/SS220/StatusEffects/job.yml
@@ -4,3 +4,10 @@
   icon:
     sprite: /Textures/SS220/Interface/Misc/job_icons.rsi
     state: SecurityPilot
+
+- type: jobIcon
+  parent: JobIcon
+  id: JobIconSecurityClown
+  icon:
+    sprite: /Textures/SS220/Interface/Misc/job_icons.rsi
+    state: SecurityClown
