--- a/Resources/Prototypes/SS220/Entities/markers/Spawners/jobs.yml
+++ b/Resources/Prototypes/SS220/Entities/markers/Spawners/jobs.yml
@@ -9,3 +9,15 @@
     layers:
       - state: green
       - state: lawyer
+
+- type: entity
+  id: SpawnPointClownSecurity
+  parent: SpawnPointJobBase
+  name: Клоун СБ
+  components:
+  - type: SpawnPoint
+    job_id: SecurityClown
+  - type: Sprite
+    layers:
+      - state: green
+      - state: security_officer
