Shlepa Iteration two fix

--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -1233,6 +1233,14 @@
   - SecurityHolster #SS220 holster loadout
   - Headphones #SS220 sec loadout update
   - ProtectGear #ss220 tacsec update
+  #SS220-Two Floppa Iteration-Begin
+  - CoderNeck
+  - MapperNeck
+  - SpriterNeck
+  - TrackerExpertNeck
+  - AdministratorNeck
+  - HeadDeveloperNeck
+  #SS220-Two Floppa Iteration-End
 #SS220 neck loadout end
 #- TrooperHat # SS220 TrooperHat neck-to-head loadout transfer
 
