--- a/Resources/Prototypes/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/Loadouts/role_loadouts.yml
@@ -360,6 +360,7 @@
   id: JobHeadOfSecurity
   groups:
   - HeadofSecurityHead
+  - SecurityGlasses #SS220-Two Floppa Iteration
   - HeadofSecurityNeck
   - HeadofSecurityJumpsuit
   - SecurityBackpack
@@ -376,6 +377,7 @@
   id: JobWarden
   groups:
   - WardenHead
+  - SecurityGlasses #SS220-Two Floppa Iteration
   - SecurityNeck #SS220 holster loadout
   - WardenJumpsuit
   - SecurityBackpack
@@ -410,6 +412,7 @@
   groups:
   - GroupTankHarness
   - DetectiveHead
+  - SecurityGlasses #SS220-Two Floppa Iteration
   # - DetectiveNeck #SS220 holster to neck
   - DetectiveJumpsuit
   - DetectiveSecBackpack #ss220 backpack noir
