--- a/Resources/Prototypes/SS220/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/SS220/Loadouts/role_loadouts.yml
@@ -36,6 +36,7 @@
   id: JobSeniorOfficer
   groups:
   - SecurityHead
+  - SecurityGlasses #SS220-Two Floppa Iteration
   - SecurityNeck  #holster loadout
   - SeniorSecJumpsuit
   - SecurityBackpack
@@ -50,6 +51,7 @@
   id: JobSecurityPilot
   groups:
   - SecurityPilotHead
+  - SecurityGlasses #SS220-Two Floppa Iteration
   - SecurityNeck #holster loadout
   - SecurityJumpsuit
   - SecurityBackpack
