--- a/Resources/Prototypes/Roles/Jobs/Security/security_officer.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/security_officer.yml
@@ -29,7 +29,7 @@
 - type: startingGear
   id: SecurityOfficerGear
   equipment:
-#    eyes: ClothingEyesGlassesSecurity #SS220-Two Floppa Iteration
+    eyes: ClothingEyesGlassesSecurity
     ears: ClothingHeadsetSecurity
     pocket1: WeaponPistolMk58Nonlethal # SS220 Bring-Rubber-Back
   storage:
