--- a/Resources/Prototypes/SS220/Roles/Jobs/Security/security_pilot.yml
+++ b/Resources/Prototypes/SS220/Roles/Jobs/Security/security_pilot.yml
@@ -28,7 +28,7 @@
 - type: startingGear
   id: SecurityPilotGear
   equipment:
-#    eyes: ClothingEyesGlassesSecurity
+    eyes: ClothingEyesGlassesSecurity
     ears: ClothingHeadsetSecurity
     belt: ClothingBeltSecurityFilled
     gloves: ClothingHandsGlovesCombat #SS220 PilotsGloves
