--- a/Resources/Prototypes/SS220/Roles/Jobs/Security/senior_sec.yml
+++ b/Resources/Prototypes/SS220/Roles/Jobs/Security/senior_sec.yml
@@ -33,7 +33,7 @@
 - type: startingGear
   id: SeniorOfficerGear
   equipment:
-#    eyes: ClothingEyesGlassesSecurity
+    eyes: ClothingEyesGlassesSecurity
     id: SeniorOfficerPDA
     ears: ClothingHeadsetSecurity
     pocket1: WeaponPistolMk58Nonlethal
