--- a/Resources/Prototypes/Roles/Jobs/Security/head_of_security.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/head_of_security.yml
@@ -44,7 +44,7 @@
 - type: startingGear
   id: HoSGear
   equipment:
-#    eyes: ClothingEyesGlassesSecurity #SS220-Two Floppa Iteration
+    eyes: ClothingEyesGlassesSecurity
     id: HoSPDA
     gloves: ClothingHandsGlovesCombat
     ears: ClothingHeadsetAltSecurity
