--- a/Resources/Prototypes/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/Roles/Jobs/departments.yml
@@ -149,11 +149,13 @@
   color: "#88FF88"
   roles: []
   primary: false
+  editorHidden: true # ss220-departments-hidden
   weight: -50
 
 - type: department
   id: Silicon
   name: department-Silicon
+  sort: 0 # ss220-departments-fix
   description: department-Silicon-description
   color: "#D381C9"
   roles:
@@ -184,4 +186,5 @@
   roles:
   - GhostRole
   primary: false
+  editorHidden: true # ss220-departments-hidden
   weight: -100
