--- a/Resources/Prototypes/SS220/Guidebook/Security.yml
+++ b/Resources/Prototypes/SS220/Guidebook/Security.yml
@@ -13,8 +13,46 @@
   priority: 2
   text: "/ServerInfo/SS220/Guidebook/Security/LethalForce.xml"
 
+# ТАБЛИЦА КЗ
+
 - type: guideEntry
   id: SS220ArticleDirectory
   name: Справочник статей
   priority: 1
   text: "/ServerInfo/SS220/Guidebook/Security/ArticleDirectory.xml"
+  children:
+  - SS2201xxArticle
+  - SS2202xxArticle
+  - SS2203xxArticle
+  - SS2204xxArticle
+  - SS2205xxArticle
+
+- type: guideEntry
+  id: SS2201xxArticle
+  name: Статьи 1xx
+  priority: 1
+  text: "/ServerInfo/SS220/Guidebook/Security/1xx.xml"
+
+- type: guideEntry
+  id: SS2202xxArticle
+  name: Статьи 2xx
+  priority: 2
+  text: "/ServerInfo/SS220/Guidebook/Security/2xx.xml"
+
+- type: guideEntry
+  id: SS2203xxArticle
+  name: Статьи 3xx
+  priority: 3
+  text: "/ServerInfo/SS220/Guidebook/Security/3xx.xml"
+
+- type: guideEntry
+  id: SS2204xxArticle
+  name: Статьи 4xx
+  priority: 4
+  text: "/ServerInfo/SS220/Guidebook/Security/4xx.xml"
+
+- type: guideEntry
+  id: SS2205xxArticle
+  name: Статьи 5xx
+  priority: 5
+  text: "/ServerInfo/SS220/Guidebook/Security/5xx.xml"
