--- a/Resources/Prototypes/SS220/Entities/Clothing/Head/hardsuit-helmets.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Head/hardsuit-helmets.yml
@@ -68,3 +68,34 @@
   - type: PressureProtection
     highPressureMultiplier: 0.32
     lowPressureMultiplier: 1000
+
+#Shitspawn operator centcomm HS
+
+- type: entity
+  parent: ClothingHeadHardsuitWithLightBase
+  id: ClothingHeadHelmetHardsuitCentcomm
+  name: Шлем бронескафандра Центком
+  description: Премиальный шлем бронескафандра для Офицеров Центрального Командования.
+  suffix: Shitspawn
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hardsuits/helmetcentcommhardsuit.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hardsuits/helmetcentcommhardsuit.rsi
+  - type: PointLight
+    color: yellow
+  - type: PressureProtection
+    highPressureMultiplier: 0.08
+    lowPressureMultiplier: 1000
+  - type: TemperatureProtection
+    heatingCoefficient: 0.005
+    coolingCoefficient: 0.005
+  - type: FireProtection
+    reduction: 0.2
+  - type: Armor
+    modifiers:
+      coefficients:
+        Blunt: 0.9
+        Slash: 0.9
+        Piercing: 0.9
+        Heat: 0.8 #ss220-helmetFix
