--- a/Resources/Prototypes/SS220/Entities/Clothing/Head/hardsuit-helmets.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Head/hardsuit-helmets.yml
@@ -74,8 +74,8 @@
 - type: entity
   parent: ClothingHeadHardsuitWithLightBase
   id: ClothingHeadHelmetHardsuitCentcomm
-  name: Шлем бронескафандра Центком
-  description: Премиальный шлем бронескафандра для Офицеров Центрального Командования.
+  name: centcom armor hardsuit helmet
+  description: Premium helmet of an armored hardsuit for Officers of the Central Command.
   suffix: Shitspawn
   components:
   - type: Sprite
